--- a/.github/workflows/check_ci.yaml
+++ b/.github/workflows/check_ci.yaml
@@ -4,6 +4,7 @@ on: [push]
 
 jobs:
   check_setup_py:
+    environment: AWS
     runs-on: ubuntu-latest
 
     steps:
@@ -19,4 +20,8 @@ jobs:
 
     - name: Run pytest
       run: poetry run pytest
+      env: # Set the secret as an env variable
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_SECRET }}
+        AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
 
