--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "exasol-script-languages-cdeveloper-sandbox"
+name = "exasol-script-languages-developer-sandbox"
 version = "0.1.0"
 description = "Manages script-languages developer virtual machines."
 
@@ -12,6 +12,8 @@ authors = [
 [tool.poetry.dependencies]
 python = ">=3.8.0,<4.0"
 click = "^8.1.3"
+boto3 = "^1.22.0"
+jinja2 = ">=3.1.0"
 
 
 [build-system]
@@ -23,6 +25,10 @@ build-backend = "poetry.core.masonry.api"
 toml = ">=0.10.2"
 pytest = "^7.1.1"
 pytest-mock = "^3.7.0"
+cfn-lint = "^0.61.0"
+gitpython = ">=2.1.0"
+localstack = "^0.14.0"
+docker = "^5.0.0"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
