--- a/exasol_script_languages_developer_sandbox/templates/ec2_cloudformation.jinja.yaml
+++ b/exasol_script_languages_developer_sandbox/templates/ec2_cloudformation.jinja.yaml
@@ -8,6 +8,10 @@ Resources:
           FromPort: 22
           IpProtocol: tcp
           ToPort: 22
+        - CidrIp: 0.0.0.0/0
+          FromPort: 8888
+          IpProtocol: tcp
+          ToPort: 8888
       Tags:
         - Key: "exasol:project"
           Value: "ScriptLanguages"
