--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ python = ">=3.8.0,<4.0"
 click = "^8.1.3"
 boto3 = "^1.22.0"
 jinja2 = ">=3.1.0"
+ansible-runner = "^2.2.1"
+ansible = "^6.1.0"
+importlib_resources = ">=5.4.0"
+exasol_script_languages_release = { git = "https://github.com/exasol/script-languages-release.git", branch = "develop"}
 
 
 [build-system]
