#5: Implemented export of VM's (#16)
fixes #5

Implements:
- `create-vm` command:the principal command for this project which runs the whole workflow
- `export-vm` command: a debug command which can be used to create ami and vm files in the S3 bucket for a exsting cloudformation stack
 - `reset-password` command: a debug command to reset the password on a running EC-2 instance
 - `show-aws-assets` command: a user command to show all active AWS resources belonging to a create-vm workflow

--- a/exasol_script_languages_developer_sandbox/templates/ec2_cloudformation.jinja.yaml
+++ b/exasol_script_languages_developer_sandbox/templates/ec2_cloudformation.jinja.yaml
@@ -17,6 +17,8 @@ Resources:
           Value: "ScriptLanguages"
         - Key: "exasol:owner"
           Value: {{user_name}}
+        - Key: {{trace_tag}}
+          Value: {{trace_tag_value}}
 
   EC2Instance:
       Type: AWS::EC2::Instance
@@ -36,3 +38,6 @@ Resources:
               Value: "ScriptLanguages"
             - Key: "exasol:owner"
               Value: {{user_name}}
+            - Key: {{trace_tag}}
+              Value: {{trace_tag_value}}
+
