#17: Implemented a CI test which validates the AMI image (#23)
fixes #17

Changes:
1. pass ami_id as parameter to cf_stack.py
2. store source ami_id in config
3. make ami_id in ec2_cloudformation.jinja.yaml parametrizable
4. added initial implementation of test_ci.py
5. reset_password_tasks.yml also removes locking of user ubuntu
6. added AwsAccess.get_instance_status(), AwsAccess.deregister_ami() and AwsAccess.remove_snapshot()

--- a/exasol_script_languages_developer_sandbox/runtime/ansible/reset_password_tasks.yml
+++ b/exasol_script_languages_developer_sandbox/runtime/ansible/reset_password_tasks.yml
@@ -3,14 +3,24 @@
     name: "{{ansible_user}}"
     state: present
     password: "{{ default_vm_password | password_hash('sha512') }}"
+    password_lock: no
   become: "{{need_sudo}}"
 
 - name: make password expired
   ansible.builtin.command: "passwd -e {{ansible_user}}"
   become: "{{need_sudo}}"
 
+- name: Disable AWS cloud password lock for user ubuntu
+  become: "{{need_sudo}}"
+  lineinfile:
+    dest: /etc/cloud/cloud.cfg
+    regexp: '^(\s*)lock_passwd: True'
+    line: '\1lock_passwd: False'
+    state: present
+    backrefs: yes
+
 - name: Enable SSH password authentication
-  become: true
+  become: "{{need_sudo}}"
   lineinfile:
     dest: /etc/ssh/sshd_config
     regexp: '^#?\s*PasswordAuthentication\s'
