--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ cfn-lint = "^0.61.0"
 gitpython = ">=2.1.0"
 localstack = "^0.14.0"
 docker = {version = ">=5.0.0", markers = "sys_platform != 'win32'"}
+fabric = "^2.7.1"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
