#24: Move CI test to AWS Codebuild (#27)
fixes #24
1. Created a new cloudformation template to deploy an AWS Codebuild project to execute the ci-test:
the codebuild is only triggered if the commit message contains the string "[CodeBuild]". This is to reduce cost and not run the build for every push
3. Created a new click command which can be used to deploy the AWS Codebuild project
4. Refactored handling of the stack prefix for the cloudformation stacks: It's now included in class AssetId

--- a/exasol_script_languages_developer_sandbox/runtime/ansible/roles/script_languages/tasks/main.yml
+++ b/exasol_script_languages_developer_sandbox/runtime/ansible/roles/script_languages/tasks/main.yml
@@ -4,8 +4,8 @@
   apt:
     name: "{{apt_dependencies}}"
     state: present
+    update_cache: yes
   become: "{{need_sudo}}"
-
 - name: Git checkout script-languages-release
   ansible.builtin.git:
     repo: 'https://github.com/exasol/script-languages-release.git'
