--- a/exasol_script_languages_developer_sandbox/runtime/ansible/roles/poetry/tasks/main.yml
+++ b/exasol_script_languages_developer_sandbox/runtime/ansible/roles/poetry/tasks/main.yml
@@ -4,6 +4,7 @@
   apt:
     name: "{{apt_dependencies}}"
     state: present
+    update_cache: yes
   become: "{{need_sudo}}"
 - name: Install Poetry
   shell: "curl -sSL https://install.python-poetry.org | python3 - -y"
