#25: Implemented motd message about Jupyter password change (#30)
fixes #25

--- a/exasol_script_languages_developer_sandbox/runtime/ansible/roles/jupyter/tasks/main.yml
+++ b/exasol_script_languages_developer_sandbox/runtime/ansible/roles/jupyter/tasks/main.yml
@@ -26,3 +26,6 @@
 
     - name: Setup Systemd service
       ansible.builtin.import_tasks: systemd.yml
+
+    - name: Setup motd
+      ansible.builtin.import_tasks: motd.yml
