--- a/exasol_script_languages_developer_sandbox/runtime/ansible/slc_setup_tasks.yml
+++ b/exasol_script_languages_developer_sandbox/runtime/ansible/slc_setup_tasks.yml
@@ -15,4 +15,7 @@
 - name: Install Script_languages
   include_role:
       name: script_languages
+- name: Update netplan
+  include_role:
+      name: netplan
 
