#45: Protected cloudfront access (#46)
fixes #45

--- a/exasol_script_languages_developer_sandbox/templates/vm_bucket_cloudformation.jinja.yaml
+++ b/exasol_script_languages_developer_sandbox/templates/vm_bucket_cloudformation.jinja.yaml
@@ -90,6 +90,7 @@ Resources:
         Enabled: true
         HttpVersion: 'http1.1'
         IPV6Enabled: true
+        WebACLId: {{acl_arn}}
         Origins:
           - DomainName: !GetAtt VMBucket.DomainName
             Id: !Sub 's3-origin-${ VMBucket }'
