#38: Included tutorial Jupyterlab notebook (#50)
fixes #38

--- a/exasol_script_languages_developer_sandbox/runtime/ansible/roles/jupyter/tasks/main.yml
+++ b/exasol_script_languages_developer_sandbox/runtime/ansible/roles/jupyter/tasks/main.yml
@@ -27,5 +27,9 @@
     - name: Setup Systemd service
       ansible.builtin.import_tasks: systemd.yml
 
+    - name: Copy tutorial notebook
+      ansible.builtin.import_tasks: tutorial.yml
+
     - name: Setup motd
       ansible.builtin.import_tasks: motd.yml
+
