fixed AWS release environment (#62)

--- a/.github/workflows/release_droid_upload_github_release_assets.yml
+++ b/.github/workflows/release_droid_upload_github_release_assets.yml
@@ -27,7 +27,7 @@ jobs:
 
   upload:
     needs: check-release
-    environment: AWS
+    environment: AWS_RELEASE
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
