#77: Update Ubuntu packages and added `cloudformation:ListStacks` to the roles for the CI runs (#79)
- The `cloudformation:ListStacks` permission is needed for `DescribeStacks` since a change in AWS

--- a/exasol_script_languages_developer_sandbox/templates/ci_code_build.jinja.yaml
+++ b/exasol_script_languages_developer_sandbox/templates/ci_code_build.jinja.yaml
@@ -24,6 +24,7 @@ Resources:
                 Effect: Allow
               - Action:
                 - cloudformation:DescribeStacks
+                - cloudformation:ListStacks
                 - cloudformation:ListStackResources
                 Resource: "*"
                 Effect: Allow
