--- a/exasol_script_languages_developer_sandbox/templates/release_code_build.jinja.yaml
+++ b/exasol_script_languages_developer_sandbox/templates/release_code_build.jinja.yaml
@@ -24,6 +24,7 @@ Resources:
                 Effect: Allow
               - Action:
                 - cloudformation:DescribeStacks
+                - cloudformation:ListStacks
                 - cloudformation:ListStackResources
                 Resource: "*"
                 Effect: Allow
