--- a/.github/workflows/check_ci.yaml
+++ b/.github/workflows/check_ci.yaml
@@ -3,20 +3,13 @@ name: Run Unit Tests
 on: [push]
 
 jobs:
-  check_setup_py:
+  run_unit_tests:
     environment: AWS
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-    - uses: abatilo/actions-poetry@v2
-      with:
-        poetry-version: 1.2.0
-    - name: Setup poetry env
-      run:  bash scripts/build/setup_poetry_env.sh "python3.8"
+     - name: Setup Python & Poetry Environment
+       uses: ./.github/actions/prepare_poetry_env
 
     - name: Run pytest
       run: poetry run pytest
