--- a/.github/workflows/check_version.yaml
+++ b/.github/workflows/check_version.yaml
@@ -1,6 +1,9 @@
 name: Check if versions are consistent
 
-on: [push]
+on:
+  push:
+    branches-ignore:
+      - "main"
 
 jobs:
   check-version-numbers:
@@ -9,13 +12,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Setup Python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-      - name: Install Poetry
-        uses: abatilo/actions-poetry@v2
-        with:
-          poetry-version: 1.2.0
+      - name: Setup Python & Poetry Environment
+        uses: ./.github/actions/prepare_poetry_env
       - name: Check Release
         run: ./scripts/build/check_release.sh "python3.8"
