--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -17,19 +17,8 @@ jobs:
 
     - name: Init submodules
       run: git submodule update --init --recursive
-
-    - name: Setup Python 3.8 for integration-test-docker-environment
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-
-    - name: Install Poetry
-      uses: abatilo/actions-poetry@v2
-      with:
-        poetry-version: 1.2.0
-
-    - name: Setup poetry env
-      run:  bash scripts/setup_poetry_env.sh "python3.8"
+    - name: Setup Python & Poetry Environment
+      uses: ./.github/actions/prepare_poetry_env
 
     - name: Start test release
       run: poetry run python3 -m exasol_script_languages_developer_sandbox.main start-test-release-build --release-title  "${{ github.event.inputs.release_title }}" --branch "$GITHUB_REF"
