--- a/.github/workflows/check_ci.yaml
+++ b/.github/workflows/check_ci.yaml
@@ -1,6 +1,9 @@
 name: Run Unit Tests
 
-on: [push]
+on:
+  push:
+    branches-ignore:
+      - "main"
 
 jobs:
   run_unit_tests:
@@ -8,12 +11,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+     - uses: actions/checkout@v3
+       with:
+         fetch-depth: 0
      - name: Setup Python & Poetry Environment
        uses: ./.github/actions/prepare_poetry_env
 
-    - name: Run pytest
-      run: poetry run pytest
-      env: # Set the secret as an env variable
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_SECRET }}
-        AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
+     - name: Run pytest
+       run: poetry run pytest
+       env: # Set the secret as an env variable
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_SECRET }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
