--- a/.github/workflows/check_ci.yaml
+++ b/.github/workflows/check_ci.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   run_unit_tests:
-    environment: AWS_CI_TEST
+    environment: AWS_CI_TESTS
     runs-on: ubuntu-latest
 
     steps:
