--- a/exasol_script_languages_developer_sandbox/runtime/ansible/roles/jupyter/files/requirements_jupyter.txt
+++ b/exasol_script_languages_developer_sandbox/runtime/ansible/roles/jupyter/files/requirements_jupyter.txt
@@ -1,5 +1,6 @@
 jupyterlab==3.4.3
 # enable interactive Javascript widgets in the notebooks
+jupyter_contrib_nbextensions==0.7.0
 widgetsnbextension==4.0.9
 ipywidgets==8.1.1
 pexpect==4.8.0
