--- a/exasol_script_languages_developer_sandbox/runtime/ansible/roles/jupyter/tasks/jupyterlab.yml
+++ b/exasol_script_languages_developer_sandbox/runtime/ansible/roles/jupyter/tasks/jupyterlab.yml
@@ -1,5 +1,9 @@
 ---
 
+- name: Install contrib nbextension
+  ansible.builtin.command: >
+    "{{jupyterlab.virtualenv}}/bin/jupyter" contrib nbextension install --user
+
 - name: Enable the ipywidgets extension
   ansible.builtin.command: >
     "{{jupyterlab.virtualenv}}/bin/jupyter" nbextension enable --py widgetsnbextension --sys-prefix
