--- a/exasol/ds/sandbox/templates/ci_code_build.jinja.yaml
+++ b/exasol/ds/sandbox/templates/ci_code_build.jinja.yaml
@@ -69,7 +69,7 @@ Resources:
   DeveloperSandboxCICodeBuild:
     Type: AWS::CodeBuild::Project
     Properties:
-      Description: CI Build which runs CI test if script-languages-developer-sandbox
+      Description: CI Build which runs CI test of data-science-sandbox
       Triggers:
         Webhook: True
         FilterGroups:
@@ -89,7 +89,7 @@ Resources:
         Image: aws/codebuild/standard:5.0
       Source:
         Type: GITHUB
-        Location: "https://github.com/exasol/script-languages-developer-sandbox"
+        Location: "https://github.com/exasol/data-science-sandbox"
         BuildSpec: "aws-code-build/ci/buildspec.yaml"
       TimeoutInMinutes: 240
 
