--- a/exasol/ds/sandbox/templates/waf_cloudformation.jinja.yaml
+++ b/exasol/ds/sandbox/templates/waf_cloudformation.jinja.yaml
@@ -2,7 +2,7 @@ Resources:
   VMDownloadACL:
     Type: AWS::WAFv2::WebACL
     Properties:
-      Name: VMDownloadLimitationWebACL
+      Name: DssVMDownloadLimitationWebACL
       Scope: CLOUDFRONT
       Description: This Web ACL contains rule to control access to the VM Bucket cloudfront distribution.
       DefaultAction:
@@ -10,29 +10,29 @@ Resources:
       VisibilityConfig:
         SampledRequestsEnabled: true
         CloudWatchMetricsEnabled: true
-        MetricName: MetricForVMDownloads
+        MetricName: DssMetricForVMDownloads
       Rules:
-        - Name: Captcha
+        - Name: DssVmDownloadCaptcha
           Priority: 1
           Action:
             Captcha: {}
           VisibilityConfig:
             SampledRequestsEnabled: true
             CloudWatchMetricsEnabled: true
-            MetricName: CaptchaMetricForVMDownloads
+            MetricName: DssCaptchaMetricForVMDownloads
           Statement:
             NotStatement:
               Statement:
                 IPSetReferenceStatement:
                   Arn: !GetAtt AllowedIpSet.Arn
-        - Name: VMBucketRateLimit
+        - Name: DssVMBucketRateLimit
           Priority: 0
           Action:
             Block: {}
           VisibilityConfig:
             SampledRequestsEnabled: true
             CloudWatchMetricsEnabled: true
-            MetricName: RateLimitMetricForVMDownloads
+            MetricName: DssRateLimitMetricForVMDownloads
           Statement:
             RateBasedStatement:
               AggregateKeyType: IP
@@ -40,8 +40,8 @@ Resources:
   AllowedIpSet:
     Type: 'AWS::WAFv2::IPSet'
     Properties:
-      Description: AllowedIp
-      Name: AllowedIp
+      Description: DssAllowedIp
+      Name: DssAllowedIp
       Scope: CLOUDFRONT
       IPAddressVersion: IPV4
       Addresses:
