Installed exasol-notebook-connector via ansible

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/tasks/main.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/tasks/main.yml
@@ -9,6 +9,10 @@
         state: present
       become: "{{need_sudo}}"
 
+    - name: Update pip version
+      include_tasks:
+        file: update-pip.yml
+
     - name: Install JupyterLab and its dependencies
       include_tasks:
         file: install-pip-packages.yml
