--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ importlib_resources = ">=5.4.0"
 exasol_script_languages_release = { git = "https://github.com/exasol/script-languages-release.git", tag = "5.0.0"}
 rich = "^12.5.1"
 pandas = "^1.4.0"
+exasol-bucketfs = "^0.8.0"
 
 
 [build-system]
