--- a/test/unit/ansible_conflict/slc_setup.yml
+++ b/test/unit/ansible_conflict/slc_setup.yml
@@ -26,3 +26,4 @@
         state: present
         update_cache: yes
     - import_tasks: slc_setup_tasks.yml
+    - import_tasks: ec2_setup_tasks.yml
