--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/tasks/main.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/tasks/main.yml
@@ -3,7 +3,7 @@
 
 - name: Setup Jupyter
   block:
-    - name: Install dependant apt packages
+    - name: Install dependent apt packages
       apt:
         name: "{{apt_dependencies}}"
         state: present
