--- a/exasol/ds/sandbox/runtime/ansible/roles/poetry/tasks/main.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/poetry/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: Install dependant apt packages
+- name: Install dependent apt packages
   apt:
     name: "{{apt_dependencies}}"
     state: present
