--- a/exasol/ds/sandbox/lib/dss_docker/Dockerfile
+++ b/exasol/ds/sandbox/lib/dss_docker/Dockerfile
@@ -1,3 +1,3 @@
 FROM ubuntu:20.04
 ENV DEBIAN_FRONTEND noninteractive
-RUN apt-get update && apt-get install --no-install-recommends -y python3 python3-pexpect
+RUN apt-get update && apt-get install --no-install-recommends --assume-yes python3 python3-pexpect
