--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ exasol_script_languages_release = { git = "https://github.com/exasol/script-lang
 rich = "^12.5.1"
 pandas = "^1.4.0"
 humanfriendly = "^10.0"
+tenacity = "^8.2.3"
 
 [build-system]
 requires = ["poetry_core>=1.0.0"]
