Feature/#30 build the data science sandbox as docker image (#40)
* First implementation of Docker creation
* Added cli.
* Remove containers and image after running integration test.
* Changed order of tests to run fast unit tests before
* Apply suggestions from code review
* Removed (scope="session") from @pytest.fixture for test Docker containers

---------

Co-authored-by: Christoph Pirkl <christoph.pirkl@exasol.com>

--- a/test/unit/ansible_conflict/slc_setup.yml
+++ b/test/unit/ansible_conflict/slc_setup.yml
@@ -25,4 +25,5 @@
         name: netplan.io
         state: present
         update_cache: yes
-    - import_tasks: slc_setup_tasks.yml
+    - import_tasks: general_setup_tasks.yml
+    - import_tasks: ec2_setup_tasks.yml
