--- a/exasol/ds/sandbox/runtime/ansible/dss_docker_playbook.yml
+++ b/exasol/ds/sandbox/runtime/ansible/dss_docker_playbook.yml
@@ -4,14 +4,14 @@
   vars:
       ansible_python_interpreter: python3
   tasks:
-
-    - name: add docker container to inventory
+    - name: Add docker container to inventory
       add_host:
-        name: "{{test_docker_container}}"
+        name: "{{docker_container}}"
+        groups: docker_container_group
         ansible_connection: docker
 
-- name: Setup Docker Container
-  hosts: ansible-test
+- name: Setup DSS Docker Container
+  hosts: docker_container_group
   gather_facts: false
   vars:
       ansible_python_interpreter: python3
@@ -20,10 +20,4 @@
       need_sudo: false
       docker_integration_test: true
   tasks:
-    - name: Install netplan.io
-      apt:
-        name: netplan.io
-        state: present
-        update_cache: yes
     - import_tasks: general_setup_tasks.yml
-    - import_tasks: ec2_setup_tasks.yml
