--- a/exasol/ds/sandbox/runtime/ansible/general_setup_tasks.yml
+++ b/exasol/ds/sandbox/runtime/ansible/general_setup_tasks.yml
@@ -5,17 +5,14 @@
   become: "{{need_sudo}}"
 - name: Install Poetry
   include_role:
-      name: poetry
+    name: poetry
 - name: Install Jupyter
   include_role:
-        name: jupyter
+    name: jupyter
+- name: Clear pip cache
+  ansible.builtin.file:
+    path: /root/.cache/pip
+    state: absent
 - name: Install Docker
   include_role:
-        name: docker
-- name: Install Script_languages
-  include_role:
-      name: script_languages
-- name: Update netplan
-  include_role:
-      name: netplan
-
+    name: docker
