--- a/exasol/ds/sandbox/runtime/ansible/slc_setup.yml
+++ b/exasol/ds/sandbox/runtime/ansible/slc_setup.yml
@@ -7,4 +7,5 @@
       need_sudo: yes
   remote_user: ubuntu
   tasks:
-  - import_tasks: slc_setup_tasks.yml
+  - import_tasks: general_setup_tasks.yml
+  - import_tasks: ec2_setup_tasks.yml
