--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,8 @@ importlib_resources = ">=5.4.0"
 exasol_script_languages_release = { git = "https://github.com/exasol/script-languages-release.git", tag = "5.0.0"}
 rich = "^12.5.1"
 pandas = "^1.4.0"
-
+humanfriendly = "^10.0"
+tenacity = "^8.2.3"
 
 [build-system]
 requires = ["poetry_core>=1.0.0"]
