--- a/.github/workflows/check_ci.yaml
+++ b/.github/workflows/check_ci.yaml
@@ -20,6 +20,7 @@ jobs:
      - name: Run pytest
        run: >
          poetry run pytest
+         -o log_cli=true
          test/unit
          test/integration/test_create_dss_docker_image.py
        env: # Set the secret as an env variable
