Improved logging for ansible tasks
Display duration of Ansible tasks.
Display Ansible messages and error for failing fixtures in ci build.
Installed rsync to enable replacing up ansible copy by faster synchronize.

--- a/.github/workflows/check_ci.yaml
+++ b/.github/workflows/check_ci.yaml
@@ -19,8 +19,7 @@ jobs:
 
      - name: Run pytest
        run: >
-         poetry run pytest
-         -o log_cli=true
+         poetry run pytest -o log_cli=true -o log_cli_level=INFO
          test/unit
          test/integration/test_create_dss_docker_image.py
        env: # Set the secret as an env variable
