--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/defaults/main.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/defaults/main.yml
@@ -5,8 +5,9 @@ jupyterlab:
   ip: '*'
   config: "{{user_home}}/.jupyter/jupyter_lab_config.py"
   virtualenv: "{{user_home}}/jupyterenv"
-  password: "{{ lookup('ansible.builtin.env', 'JUPYTER_LAB_PASSWORD', default='script-languages') }}"
+  password: "{{ lookup('ansible.builtin.env', 'JUPYTER_LAB_PASSWORD', default='dss') }}"
   notebook_folder: "{{user_home}}/notebooks"
 
 apt_dependencies:
+  - rsync=3.1.3-8ubuntu0.7
   - virtualenv=20.0.17-1ubuntu0.4
