--- a/exasol/ds/sandbox/lib/dss_docker/Dockerfile
+++ b/exasol/ds/sandbox/lib/dss_docker/Dockerfile
@@ -2,3 +2,5 @@ FROM ubuntu:20.04
 ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update && apt-get install --no-install-recommends --assume-yes python3 python3-pexpect
 EXPOSE 8888/tcp
+# VOLUME /root/notebooks
+# ENTRYPOINT cp -ur /root/notebooks/* /root/new/ && chmod -R a+rw /root/new/*
