--- a/exasol/ds/sandbox/runtime/ansible/dss_docker_playbook.yml
+++ b/exasol/ds/sandbox/runtime/ansible/dss_docker_playbook.yml
@@ -20,4 +20,9 @@
       need_sudo: false
       docker_integration_test: true
   tasks:
-    - import_tasks: general_setup_tasks.yml
+#    - import_tasks: general_setup_tasks.yml
+    - name: Copy notebook content
+      ansible.builtin.copy:
+        src: "roles/jupyter/files/notebook/data/"
+        dest: /root/notebooks
+        mode: 0644
