--- a/exasol/ds/sandbox/runtime/ansible/slc_setup.yml
+++ b/exasol/ds/sandbox/runtime/ansible/slc_setup.yml
@@ -7,5 +7,6 @@
       need_sudo: yes
   remote_user: ubuntu
   tasks:
-  - import_tasks: general_setup_tasks.yml
-  - import_tasks: ec2_setup_tasks.yml
+    - import_tasks: general_setup_tasks.yml
+    - import_tasks: ec2_setup_tasks.yml
+    - import_tasks: cleanup_tasks.yml
