Added python script for entry point
Retrieve path of notebook folder from ansible fact_cache

--- a/exasol/ds/sandbox/runtime/ansible/dss_docker_playbook.yml
+++ b/exasol/ds/sandbox/runtime/ansible/dss_docker_playbook.yml
@@ -26,3 +26,6 @@
         src: "roles/jupyter/files/notebook/data/"
         dest: /root/notebooks
         mode: 0644
+    - name: Copy Entry Point Script
+      include_role:
+        name: entrypoint
