#23: Setup ci incl. AWS code build (#70)
* Added cli output for pytest in AWS codebuild
* Fixed permissions for creating EC2 instance
* Updated developer guide
* Update changes file
* Replaced become: true by {{need_sudo}}
* Added -s to build script
* Replaced short cli options in build script by long ones
* Added file release_config.yml and updated develoepr guide

Co-authored-by: Torsten Kilias <tkilias@users.noreply.github.com>

--- a/exasol/ds/sandbox/runtime/ansible/cleanup_tasks.yml
+++ b/exasol/ds/sandbox/runtime/ansible/cleanup_tasks.yml
@@ -1,7 +1,9 @@
 - name: Ansible Clean
   ansible.builtin.apt:
     clean: yes
+  become: "{{need_sudo}}"
 - name: Remove files in /var/lib/apt/lists/
   ansible.builtin.file:
     path: /var/lib/apt/lists/
     state: absent
+  become: "{{need_sudo}}"
