Updated existing integration tests
Old tests triggered starting Jupyter server, while container now runs it by
default. Additionally I added support for a commandline option to reuse
an existing Docker image.

--- a/exasol/ds/sandbox/runtime/ansible/general_setup_tasks.yml
+++ b/exasol/ds/sandbox/runtime/ansible/general_setup_tasks.yml
@@ -9,6 +9,9 @@
 - name: Install Poetry
   include_role:
     name: poetry
+- name: Copy Entry Point Script
+  include_role:
+    name: entrypoint
 - name: Install Jupyter
   include_role:
     name: jupyter
