--- a/exasol/ds/sandbox/runtime/ansible/roles/entrypoint/tasks/main.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/entrypoint/tasks/main.yml
@@ -3,9 +3,9 @@
     src: "entrypoint.py"
     dest: "/root/entrypoint.py"
     mode: 0644
-# this task can be removed later
-- name: Set my fact for later discovery
-  ansible.builtin.set_fact:
-    dss_ansible_facts:
-      notebook_folder: "{{jupyterlab.notebook_folder}}"
-    cacheable: yes
+# # this task can be removed later
+# - name: Set my fact for later discovery
+#   ansible.builtin.set_fact:
+#     dss_ansible_facts:
+#       notebook_folder: "{{jupyterlab.notebook_folder}}"
+#     cacheable: yes
