--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/defaults/main.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/defaults/main.yml
@@ -7,6 +7,7 @@ jupyterlab:
   virtualenv: "{{user_home}}/jupyterenv"
   password: "{{ lookup('ansible.builtin.env', 'JUPYTER_LAB_PASSWORD', default='dss') }}"
   notebook_folder: "{{user_home}}/notebook-defaults"
+  notebook_folder_final: "{{user_home}}/notebooks"
 
 apt_dependencies:
   - rsync=3.1.3-8ubuntu0.7
