--- a/exasol/ds/sandbox/runtime/ansible/dss_docker_playbook.yml
+++ b/exasol/ds/sandbox/runtime/ansible/dss_docker_playbook.yml
@@ -17,6 +17,9 @@
       ansible_python_interpreter: python3
       user_name: root
       user_home: /root
+      entrypoint_script: "{{user_home}}/entrypoint.py"
+      notebook_folder: "{{user_home}}/notebook-defaults"
+      notebook_folder_final: "{{user_home}}/notebooks"
       need_sudo: false
       docker_integration_test: true
   tasks:
