override jupyter variables in include_role

--- a/exasol/ds/sandbox/runtime/ansible/general_setup_tasks.yml
+++ b/exasol/ds/sandbox/runtime/ansible/general_setup_tasks.yml
@@ -28,6 +28,11 @@
 - name: Install Jupyter
   include_role:
     name: jupyter
+  vars:
+    jupyterlab_virtualenv: "{{ dss_facts.jupyter.virtualenv }}"
+    jupyterlab_command: "{{ dss_facts.jupyter.command }}"
+    jupyterlab_password: "{{ lookup('ansible.builtin.env', 'JUPYTER_LAB_PASSWORD', default='dss') }}"
+    jupyterlab_notebook_folder: "{{ dss_facts.notebook_folder.final }}"
 - name: Clear pip cache
   ansible.builtin.file:
     path: /root/.cache/pip
