--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/tasks/update-pip.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/tasks/update-pip.yml
@@ -4,6 +4,6 @@
   ansible.builtin.pip:
     name: pip
     state: latest
-    virtualenv: "{{jupyterlab.virtualenv}}"
+    virtualenv: "{{jupyterlab_virtualenv}}"
     virtualenv_python: python3.8
     extra_args: "--upgrade"
