--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/tasks/install-pip-packages.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/tasks/install-pip-packages.yml
@@ -11,7 +11,7 @@
   ansible.builtin.pip:
     requirements: "{{ pip_requirements_file_loc.dest }}"
     state: latest
-    virtualenv: "{{jupyterlab.virtualenv}}"
+    virtualenv: "{{jupyterlab_virtualenv}}"
     virtualenv_python: python3.8
 
 - name: Remove the requirements file (delete file)
