--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/templates/etc/systemd/system/jupyter.service
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/templates/etc/systemd/system/jupyter.service
@@ -4,7 +4,7 @@ Description=Jupyter Notebook
 [Service]
 Type=simple
 PIDFile=/run/jupyter.pid
-ExecStart="{{jupyterlab.virtualenv}}/bin/jupyter-lab" --notebook-dir="{{jupyterlab.notebook_folder}}" --no-browser
+ExecStart="{{jupyterlab_command}}" --notebook-dir="{{jupyterlab_notebook_folder}}" --no-browser
 User={{user_name}}
 Restart=always
 RestartSec=10
